# capstone_project

./: .gitignore  README.md  audit.md  plan.md  test_ollama.py
adk_ucp_ap2_working_prototype/ucp-merchant-server/: merchant.db  pyproject.toml  run.sh
adk_ucp_ap2_working_prototype/ucp-merchant-server/app/: catalog.py  checkout.py  config.py  db.py  keys.py  main.py  mandate_router.py  mcp_router.py  models.py  ucp_router.py
adk_ucp_ap2_working_prototype/ucp-merchant-server/app/_keys/: merchant.json
adk_ucp_ap2_working_prototype/ucp-merchant-server/frontend/: package-lock.json
adk_ucp_ap2_working_prototype/ucp-merchant-server/frontend/src/: App.css  App.tsx
marvis/: .env.example  .gitignore  ARCHITECTURE.md  README.md  SUBMISSION.md  dump.txt  pyproject.toml  run_broker.sh  run_frontend.sh  run_marvis.sh  run_proxy.sh
marvis/app/: agent.py  auth.py  config.py  db.py  fast_api_app.py  keys.py  receipts.py  seed_demo.py  wallet.py
marvis/app/broker/: broker_client.py
marvis/app/builder/: persist.py  validate.py
marvis/app/capability/: gdocs_session.py  grant.py
marvis/app/escrow/: operations.py  split.py
marvis/app/marketplace/: listing.py  seed.py  skill_card.py  skill_registry.py
marvis/app/runtime/: specialist.py
marvis/app/workflow/nodes/: build.py  capability.py  discover.py  dispatch.py  hire.py  intake.py  payout.py  terminals.py  verify.py
marvis/broker_server/: app.py  checkout.py  config.py  db.py  keys.py  mandate_router.py  mcp_router.py  models.py  skill_router.py
marvis/frontend/: index.html  package-lock.json  package.json  vite.config.ts
marvis/frontend/src/: App.css  App.tsx  api.ts  balanceBus.ts  index.css
marvis/frontend/src/components/: A2uiRenderer.tsx  BrandWord.tsx  Icon.tsx  Modal.tsx  Sidebar.tsx
marvis/frontend/src/pages/: AboutPlatform.tsx  Auth.tsx  Chat.tsx  ContributedSkills.tsx  Landing.tsx  Marketplace.tsx  (+4 more)
marvis/references/: README.md  stray-root-package-lock.json
marvis/references/proxy_server/: app.py
marvis/tests/: test_split.py
(+142 files in other folders)
